# CoastalHydrodynamicsCalculator

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
CoastalHydrodynamicsCalculator/: DispersionEquationWavelengthCalculator.cpp  DispersionEquationWavelengthCalculator.hpp  EllipticCosineWavePeriodCalculator.hpp  EllipticCosineWaveWavelengthCalculator.cpp  EllipticCosineWaveWavelengthCalculator.hpp  EllipticIntegral.cpp  EllipticIntegral.hpp
CoastalHydrodynamicsCalculator/MATLAB/: WaveRefractionCalc.cpp  WaveRefractionCalc.def  WaveRefractionCalc.exp  WaveRefractionCalc.exports  WaveRefractionCalc.h  WaveRefractionCalc.lib  WaveRefractionCalc.m  WaveRefractionCalc.prj  libmat.lib  libmx.lib  mclmcr.lib  mclmcrrt.lib  readme.txt
CoastalHydrodynamicsCalculator/MATLAB/WaveRefractionCalc/: PackagingLog.html
CoastalHydrodynamicsCalculator/MATLAB/WaveRefractionCalc/for_redistribution_files_only/: GettingStarted.html  WaveRefractionCalc.h  WaveRefractionCalc.lib
CoastalHydrodynamicsCalculator/MATLAB/WaveRefractionCalc/for_redistribution_files_only/v2/generic_interface/: WaveRefractionCalc.ctf  readme.txt
CoastalHydrodynamicsCalculator/MATLAB/WaveRefractionCalc/for_testing/: WaveRefractionCalc.cpp  WaveRefractionCalc.def  WaveRefractionCalc.exp  WaveRefractionCalc.exports  WaveRefractionCalc.h  WaveRefractionCalc.lib  readme.txt
CoastalHydrodynamicsCalculator/MATLAB/WaveRefractionCalc/for_testing/v2/generic_interface/: WaveRefractionCalc.ctf
CoastalHydrodynamicsCalculator/MATLAB/v2/generic_interface/: WaveRefractionCalc.ctf
QtUI/: CalculatorWindow.ui  CalculatorWindow.ui.autosave  MainWindow.cpp  MainWindow.hpp
matlab/: WaveRefraction.m  WaveRefractionDiffFunction.m
